# badapple-efi

./: .gitignore  Cargo.toml  run.sh
.cargo/: config.toml
encoder/: clean.sh  codec.md  main.py
src/: main.rs
