[package]
name = "badapple-efi"
version = "0.1.0"
authors = ["rinsuki <428rinsuki+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
log = "0.4.14"
uefi = { git = "https://github.com/rust-osdev/uefi-rs", features = ["alloc", "exts"] }
uefi-services = { git = "https://github.com/rust-osdev/uefi-rs" }

[patch.crates-io]
uefi = { git = "https://github.com/rust-osdev/uefi-rs" }
